--- a/cuda/cuda_meta_parameters.yaml
+++ b/cuda/cuda_meta_parameters.yaml
@@ -1,5 +1,8 @@
 ---
 meta_parameters:
+  cuGetErrorName:
+    - [OutScalar, pStr]
+    - [OutPtrString, pStr]
   cuGetErrorString:
     - [OutScalar, pStr]
     - [OutPtrString, pStr]
