--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -60,6 +60,8 @@ CLEANFILES = \
 EXTRA_DIST = \
 	lttng_dummy_trace.sh \
 	LTTng.rb \
+	gen_babeltrace_lib_helper.rb \
+	gen_babeltrace_model_helper.rb \
 	tracepoint_gen.rb \
 	yaml_ast.rb \
 	gen_dummy_trace.rb \
