--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = utils opencl ze xprof cuda
+SUBDIRS = utils opencl ze xprof cuda omp
 
 EXTRA_DIST = autogen.sh README.md
