Added new callbacks

--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -193,7 +193,7 @@ trace_and_summary() {
         lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
     fi
 <% if languages.include?("omp") %>
-    lttng enable-event --channel=blocking-channel --userspace lttng_ust_ompt:*
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ompt:*
 <% end %>
 <% if languages.include?("opencl") %>
     opencl_disable_events="lttng_ust_opencl:clSetKernelArg*,lttng_ust_opencl:clGetKernelArg*,"
