--- a/xprof/interval_model.yaml
+++ b/xprof/interval_model.yaml
@@ -13,43 +13,44 @@
     :class: unsigned
   - :name: ts
     :class: signed
+  - :name: backend
+    :class: signed
 :event_classes:
 - :name: lttng:host
   :payload:
-      - :name: name
-        :class: string
-      - :name: dur
-        :class: unsigned
-      - :name: err
-        :class: bool
+  - :name: name
+    :class: string
+  - :name: dur
+    :class: unsigned
+  - :name: err
+    :class: bool
 - :name: lttng:device
   :payload:
-      - :name: name
-        :class: string
-      - :name: dur
-        :class: unsigned
-      - :name: did
-        :class: unsigned
-        :class_properties:
-          :preferred_display_base: 16
-      - :name: sdid
-        :class: unsigned      
-        :class_properties:
-          :preferred_display_base: 16
-      - :name: err
-        :class: bool
-      - :name: metadata
-        :class: string
-
+  - :name: name
+    :class: string
+  - :name: dur
+    :class: unsigned
+  - :name: did
+    :class: unsigned
+    :class_properties:
+      :preferred_display_base: 16
+  - :name: sdid
+    :class: unsigned      
+    :class_properties:
+      :preferred_display_base: 16
+  - :name: err
+    :class: bool
+  - :name: metadata
+    :class: string
 - :name: lttng:device_name
   :payload:
-      - :name: name
-        :class: string
-      - :name: did
-        :class: unsigned
+  - :name: name
+    :class: string
+  - :name: did
+    :class: unsigned
 - :name: lttng:traffic
   :payload:
-      - :name: name
-        :class: string
-      - :name: size
-        :class: unsigned 
+  - :name: name
+    :class: string
+  - :name: size
+    :class: unsigned 
