--- a/opencl/tests/interval_profiling_fast.yaml
+++ b/opencl/tests/interval_profiling_fast.yaml
@@ -12,6 +12,8 @@
     :class: unsigned
   - :name: ts
     :class: unsigned
+  - :name: backend
+    :class: signed
 :streams:
 - :name: stream0
   :class: interval_class
@@ -30,6 +32,7 @@
 - :name: lttng:host
   :common_context:
     hostname: aurora12.gov
+    backend: -1
   :payload:
     name: clEnqueueReadBuffer
     dur: 3
