--- a/opencl/tests/interval_profiling_interleave_process.yaml
+++ b/opencl/tests/interval_profiling_interleave_process.yaml
@@ -12,6 +12,8 @@
     :class: unsigned
   - :name: ts
     :class: unsigned
+  - :name: backend
+    :class: signed
 :streams:
 - :name: stream0
   :class: interval_class
@@ -20,6 +22,7 @@
   :common_context:
     hostname: aurora12.gov
     vpid: -1
+    backend: -1
   :payload:
     name: clEnqueueSVMFree
     dur: 4
@@ -27,6 +30,7 @@
   :common_context:
     hostname: aurora12.gov
     ts: 1
+    backend: -1
   :payload:
     name: clEnqueueSVMFree
     dur: 4
