--- a/opencl/tests/interval_profiling_normal_command_queue_created_in_other_thread.yaml
+++ b/opencl/tests/interval_profiling_normal_command_queue_created_in_other_thread.yaml
@@ -12,6 +12,8 @@
     :class: unsigned
   - :name: ts
     :class: unsigned
+  - :name: backend
+    :class: signed
 :streams:
 - :name: stream0
   :class: interval_class
@@ -22,6 +24,7 @@
   :common_context:
     hostname: aurora12.gov
     vtid: 0
+    backend: -1
   :payload:
     name: clCreateCommandQueue
     dur: 1
@@ -34,6 +37,7 @@
   :common_context:
     hostname: aurora12.gov
     ts: 2
+    backend: -1
   :payload:
     name: clEnqueueReadBuffer 
     dur: 2
