--- a/xprof/tests/interval_profiling_normal.yaml
+++ b/xprof/tests/interval_profiling_normal.yaml
@@ -12,6 +12,8 @@
     :class: unsigned
   - :name: ts
     :class: unsigned
+  - :name: backend
+    :class: signed
 :streams:
 - :name: stream0
   :class: interval_class
@@ -27,6 +29,7 @@
   :payload:
     name: clEnqueueReadBuffer 
     dur: 2
+    backend: -1
 - :name: lttng:device
   :common_context:
     hostname: aurora12.gov
