babeltrace_omp support

--- a/configure.ac
+++ b/configure.ac
@@ -107,4 +107,5 @@ AC_CONFIG_FILES([cuda/test_wrapper.sh], [chmod +x cuda/test_wrapper.sh])
 AC_CONFIG_FILES([xprof/test_wrapper.sh], [chmod +x xprof/test_wrapper.sh])
 AC_CONFIG_FILES([utils/babeltrace_thapi], [chmod +x utils/babeltrace_thapi])
 AC_CONFIG_FILES([omp/tracer_omp.sh], [chmod +x omp/tracer_omp.sh])
+AC_CONFIG_FILES([omp/babeltrace_omp], [chmod +x omp/babeltrace_omp])
 AC_OUTPUT
