--- a/omp/tracer_omp.sh.in
+++ b/omp/tracer_omp.sh.in
@@ -19,16 +19,12 @@ display_version() {
     exit 1
 }
 
-lazy_export() {
-    if [ -z "${!1}" ]; then
-         export "$1"="$2"
-    fi
-}
-
+intel_extension=true
 while true; do
   case "$1" in
-    --help           ) display_help; exit;;
-    --version        ) display_version; exit;;
+    --help                   ) display_help; exit;;
+    --version                ) display_version; exit;;
+    --disable-intel-extension) intel_extension=false shift;;
     -- ) shift; break ;;
     * ) break ;;
   esac
@@ -52,7 +48,11 @@ lttng enable-event --channel=blocking-channel --userspace lttng_ust_ompt:*
 
 export OMP_TOOL_LIBRARIES=$libdir/libTracerOMPT.so
 export LTTNG_UST_ALLOW_BLOCKING=1
-lazy_export LTTNG_UST_OMP_INTEL 1
+
+if [ "$intel_extension" = true ] ; then
+    export LTTNG_UST_OMP_INTEL=1
+fi
+
 lttng start
 
 ctrl_c() {
