--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -382,9 +382,18 @@ done
 
 if [ -n "$debug" ]; then
     set -x
+<% if languages.include?("ze") %>
     export LTTNG_UST_ZE_VERBOSE=1
+<% end %>
+<% if languages.include?("opencl") %>
     export LTTNG_UST_OPENCL_VERBOSE=1
+<% end %>
+<% if languages.include?("cuda") %>
     export LTTNG_UST_CUDA_VERBOSE=1
+<% end %>
+<% if languages.include?("omp") %>
+    export LTTNG_UST_OMP_VERBOSE=1
+<% end %>
     export LIBBABELTRACE2_INIT_LOG_LEVEL=WARNING
     export BABELTRACE_CLI_LOG_LEVEL=WARNING
 else
