--- a/configure.ac
+++ b/configure.ac
@@ -92,7 +92,8 @@ AC_CONFIG_FILES([Makefile
                  opencl/Makefile
                  ze/Makefile
                  xprof/Makefile
-                 cuda/Makefile])
+                 cuda/Makefile
+                 omp/Makefile])
 AC_CONFIG_FILES([opencl/tracer_opencl.sh], [chmod +x opencl/tracer_opencl.sh])
 AC_CONFIG_FILES([opencl/babeltrace_opencl], [chmod +x opencl/babeltrace_opencl])
 AC_CONFIG_FILES([opencl/extract_enqueues], [chmod +x opencl/extract_enqueues])
@@ -105,4 +106,6 @@ AC_CONFIG_FILES([cuda/tracer_cuda.sh], [chmod +x cuda/tracer_cuda.sh])
 AC_CONFIG_FILES([cuda/test_wrapper.sh], [chmod +x cuda/test_wrapper.sh])
 AC_CONFIG_FILES([xprof/test_wrapper.sh], [chmod +x xprof/test_wrapper.sh])
 AC_CONFIG_FILES([utils/babeltrace_thapi], [chmod +x utils/babeltrace_thapi])
+AC_CONFIG_FILES([omp/tracer_omp.sh], [chmod +x omp/tracer_omp.sh])
+AC_CONFIG_FILES([omp/babeltrace_omp], [chmod +x omp/babeltrace_omp])
 AC_OUTPUT
