--- a/opencl/tests/interval_profiling_normal_command_queue.yaml
+++ b/opencl/tests/interval_profiling_normal_command_queue.yaml
@@ -12,6 +12,8 @@
     :class: unsigned
   - :name: ts
     :class: unsigned
+  - :name: backend
+    :class: signed
 :streams:
 - :name: stream0
   :class: interval_class
@@ -19,6 +21,7 @@
 - :name: lttng:host
   :common_context:
     hostname: aurora12.gov
+    backend: 0
   :payload:
       name: clCreateCommandQueue
       dur: 1
@@ -31,6 +34,7 @@
   :common_context:
     hostname: aurora12.gov
     ts: 2
+    backend: 0
   :payload:
       name: clEnqueueReadBuffer 
       dur: 2
