--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -25,12 +25,15 @@ directory=language.downcase
     export LD_PRELOAD=$libdir/#{libtracer}.so:$LD_PRELOAD
 EOF
 end%>
+
 <%# https://www.gnu.org/software/libc/manual/html_node/Argument-Syntax.html
 Option names are typically one to three words long, with hyphens to separate words %>
 
 display_help() {
-<% if languages.include?("opencl") and languages.include?("ze") and  languages.include?("cuda") %>
+<% if ["omp","ze","cuda","opencl"].all? { |l| languages.include?(l) } %>
     echo "$(basename $0): a tracer / summarizer of OpenCL, L0, and CUDA driver calls"
+<% elsif languages.include?("omp") %>
+    echo "$(basename $0): a tracer / summarizer of OMP calls"
 <% elsif languages.include?("opencl") %>
     echo "$(basename $0): a tracer / summarizer of OpenCL calls"
 <% elsif languages.include?("ze") %>
@@ -102,10 +105,20 @@ whichlib64_head() {
     done
 }
 
+# > unset FOO ; lazy_export FOO 1 ; echo $FOO
+# 1
+# > export FOO=2 ; lazy_export FOO 1 ; echo $FOO
+# 2
+lazy_export() {
+    if [ -z "${!1}" ]; then
+         export "$1"="$2"
+    fi
+}
+
 bt2_all() {
     if [ -n "$trace" ]; then
         # Todo filter direcly in the babeltrace
-<% if languages.include?("opencl") and languages.include?("ze") and languages.include?("cuda")%>
+<% if ["omp","ze","cuda","opencl"].all? { |l| languages.include?(l) } %>
         $bindir/babeltrace_thapi -r -c "$@"
 <% elsif languages.include?("opencl") %>
         $bindir/babeltrace_opencl -r -c "$@"
@@ -113,6 +126,8 @@ bt2_all() {
         $bindir/babeltrace_ze -r -c "$@"
 <% elsif languages.include?("cuda") %>
         $bindir/babeltrace_cuda -r -c  "$@"
+<% elsif languages.include?("omp") %>
+        $bindir/babeltrace_omp -r -c  "$@"
 <% end %>
     fi
 
@@ -129,6 +144,9 @@ bt2_all() {
 <% if languages.include?("cuda") %>
                    --component=filter.cudainterval.interval \
 <% end %>
+<% if languages.include?("omp") %>
+                   --component=filter.ompinterval.interval \
+<% end %>
                    --component=sink.xprof.timeline
     fi
 
@@ -144,6 +162,9 @@ bt2_all() {
 <% end %>
 <% if languages.include?("cuda") %>
                    --component=filter.cudainterval.interval \
+<% end %>
+<% if languages.include?("omp") %>
+                   --component=filter.ompinterval.interval \
 <% end %>
                    --component=sink.xprof.tally \
                    --params="display=$display, \
@@ -164,7 +185,7 @@ trace_and_summary() {
     if [ -n "$live" ]; then
         lttng $quiet create iprof --live
     else
-<% if languages.include?("opencl") and  languages.include?("ze")%>
+<% if ["omp","ze","cuda","opencl"].all? { |l| languages.include?(l) } %>
         THAPI_LTTNG_O=${LTTNG_HOME:-$HOME}/lttng-traces/iprof-$(date '+%Y%m%d-%H%M%S')
 <% elsif languages.include?("opencl") %>
         THAPI_LTTNG_O=${LTTNG_HOME:-$HOME}/lttng-traces/thapi-opencl-session-$(date '+%Y%m%d-%H%M%S')
@@ -184,6 +205,10 @@ trace_and_summary() {
     else
         lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
     fi
+<% if languages.include?("omp") %>
+    lazy_export LTTNG_UST_OMP_INTEL 1
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ompt:*
+<% end %>
 <% if languages.include?("opencl") %>
     opencl_disable_events="lttng_ust_opencl:clSetKernelArg*,lttng_ust_opencl:clGetKernelArg*,"
     opencl_disable_events+="lttng_ust_opencl:clSetKernelExecInfo*,lttng_ust_opencl:clGetKernelInfo*,"
@@ -201,7 +226,7 @@ trace_and_summary() {
 <% if languages.include?("ze") %>
 
     export LTTNG_UST_ZE_PROFILE=1
-    export LTTNG_UST_ZE_PARANOID_DRIFT=1
+    lazy_export LTTNG_UST_ZE_PARANOID_DRIFT 1
 
     if [ $mode = "minimal" ]; then
         lttng $quiet enable-event --channel=blocking-channel --userspace $(cat $datadir/babeltrace_zeprofiling_apis.txt)
@@ -237,6 +262,11 @@ trace_and_summary() {
     export LTTNG_UST_ALLOW_BLOCKING=1
 
     #Find libs and preload
+<% if languages.include?("omp") %>
+    if [ -z "$OMP_TOOL_LIBRARIES" ]; then 
+        export OMP_TOOL_LIBRARIES=$libdir/libTracerOMPT.so
+    fi
+<% end %>
 <% if languages.include?("opencl") %>
 <%= print_loader_logic("opencl","libOpenCL","libTracerOpenCL")%>
 <% end %>
@@ -286,8 +316,8 @@ summary() {
         >&2 echo "Trace location:" $lttng_last_session
         >&2 echo
     elif [ "$#" -eq 0 ]; then
-<% if languages.include?("opencl") and languages.include?("ze") and languages.include?("cuda")%>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME:-$HOME}/lttng-traces/* | head -1)
+<% if ["omp","ze","cuda","opencl"].all? { |l| languages.include?(l) } %>
+        lttng_last_session=$(ls -dt ${LTTNG_HOME:-$HOME}/lttng-traces/iprof-* | head -1)
 <% elsif languages.include?("opencl") %>
         lttng_last_session=$(ls -dt ${LTTNG_HOME:-$HOME}/lttng-traces/thapi-opencl-session* | head -1)
 <% elsif languages.include?("ze") %>
@@ -353,9 +383,18 @@ done
 
 if [ -n "$debug" ]; then
     set -x
+<% if languages.include?("ze") %>
     export LTTNG_UST_ZE_VERBOSE=1
+<% end %>
+<% if languages.include?("opencl") %>
     export LTTNG_UST_OPENCL_VERBOSE=1
+<% end %>
+<% if languages.include?("cuda") %>
     export LTTNG_UST_CUDA_VERBOSE=1
+<% end %>
+<% if languages.include?("omp") %>
+    export LTTNG_UST_OMP_VERBOSE=1
+<% end %>
     export LIBBABELTRACE2_INIT_LOG_LEVEL=WARNING
     export BABELTRACE_CLI_LOG_LEVEL=WARNING
 else
