--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -237,12 +237,15 @@ trace_and_summary() {
 
         ze_disable_properties="lttng_ust_ze_properties:memory_info_properties,lttng_ust_ze_properties:memory_info_range"
         ze_disable_events="lttng_ust_ze:zeKernelSetArgumentValue*,lttng_ust_ze:ze*Get*Properties*,lttng_ust_ze:zeKernelGetName"
+        ze_disable_querry="lttng_ust_ze:*QueryStatus"
         lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_properties:* -x ${ze_disable_properties}
         lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze:* -x ${ze_disable_events}
+        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze:* -x ${ze_disable_querry}
 
         if [ $mode = "full" ]; then
             lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_events} 
             lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_properties}
+            lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_querry}
         fi
     fi
 <% end %>
