Updated to spec r1.4.1

--- a/ze/ze_meta_parameters.yaml
+++ b/ze/ze_meta_parameters.yaml
@@ -255,9 +255,9 @@ meta_parameters:
   zeFabricVertexGetPropertiesExp:
     - [ OutScalar, pVertexProperties ]
   zeFabricVertexGetDeviceExp:
-    - [ OutScalar, pDevice ]
+    - [ OutScalar, phDevice ]
   zeDeviceGetFabricVertexExp:
-    - [ OutScalar, pVertex ]
+    - [ OutScalar, phVertex ]
   zeFabricEdgeGetExp:
     - [ InOutScalar, pCount ]
     - [ OutArray, phEdges, pCount ]
